fix gap in the dashboard groups

--- a/pops/static/pops/less/style.less
+++ b/pops/static/pops/less/style.less
@@ -409,6 +409,7 @@ fieldset {
     h2 {
       .border-radius(@dashboardRounding @dashboardRounding 0 0);
       background-color: @grayLighter;
+      margin-bottom: 0;  // fix margin created a gap in the box
       padding-left: @gridGutterWidth;
       border: 1px solid @grayLight;
       border-bottom: 1px solid @grayLight;
